# ai-art-generator

./: .env.example  .gitignore  README.md  pyproject.toml  test-cli.txt
backend/: artgen.json  artgen.py  artgen_cli.py  pytest.ini  requirements.txt  test_cache_fix.py
backend/app/: __init__.py  config.py  main.py  models.py  queue_manager.py  websocket.py  worker.py
backend/parsers/: __init__.py  input_parser.py
backend/pipeline/: __init__.py  asset_loader.py  cache.py  context.py  executor.py  expressions.py  orchestrator.py  project.py  retry.py  spec_parser.py  templates.py  validation.py  web_bridge.py  web_server.py
backend/providers/: __init__.py  base.py  gemini.py  litellm_provider.py  registry.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_asset_loader.py  test_cache.py  test_cli.py  test_expressions.py  test_image_utils.py  test_interactive.py  test_mse_executor.py  test_parsers.py  test_pipeline_live.py  test_providers_live.py  test_templates.py
docs-ai/: ARCHITECTURE.md  CLARIFYING_QUESTIONS.md  CLI_FIRST_PLAN.md  INTERACTIVE_MODE.md  MISSING_FEATURES_SPRITE_RECIPE.md  MTGRANDOM_MIGRATION_PLAN.md  PIPELINE_BRAINSTORM.md  PIPELINE_FEATURES_PROPOSAL.md  PIPELINE_FORMAT.md  PIPELINE_SPEC.md  PIPELINE_V1_DECISIONS.md  PRODUCT_VISION.md  TOOL_RESEARCH.md  USER_EXPERIENCE_REPORT.md
examples/: incremental-sprites.yaml  iterative-portrait.yaml  magic-cards.yaml  simple-sprites.yaml  units.csv
examples/generate_sprites/: README.md  (+3 more)
frontend/: package-lock.json
test-outputs/: artgen.json
test-outputs-transparent/: artgen.json
test-outputs-v2/: artgen.json
test-sprites/: artgen.json
(+172 files in other folders)
